# expyriment-stash

./: .gitignore  README.md  pyproject.toml
examples/: README.md  data_preprocessing.py
examples/behavioural/: README.md
examples/behavioural/left_right_detection_task/: left_right_center_detection.py  left_right_detection.py
examples/behavioural/lexical_decision/: analyze_RT.py  pseudowords.csv  words.csv
examples/behavioural/line_bisection/: line_bisection.py
examples/behavioural/mental_logic_card_game/: generate_lists.py  trials_subj_01.csv  trials_subj_02.csv
examples/behavioural/moving_stimulus/: moving_stimulus.py
examples/behavioural/parity_short/: really_short_exp.py
examples/behavioural/snarc_experiment/: csv_load_design.py  csv_save_design.py  data_preprocessing.py  snarc_experiment.py
examples/behavioural/word_fragment_completion_task/: word_fragment_completion_task.py
examples/check-audio-visual-timing/: check-audio-visual-timing.py
examples/fmri/: README.md
examples/stroop_task/: stroop_task.py
examples/tests/: README.md
extras/design/: _stimulationprotocol.py
extras/io/: _midiin.py  _midiout.py  _simpleparallelport.py  _tbvnetworkinterface.py  _tcpclient.py  _tcpserver.py  _turbosatorinetworkinterface.py
extras/misc/: README.md
extras/stimuli/: _dotcloud.py  _gaborpatch.py  _lcdsymbol.py  _noisetone.py  _polygondot.py  _polygonellipse.py  _polygonline.py  _polygonrectangle.py  _randomdotkinematogram.py  _stimuluscircle.py  _stimuluscloud.py  _thermometerdisplay.py  _visualmask.py
tools/: osf_sync.py
(+87 files in other folders)
